--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
 		"clsx": "2.1.1",
 		"framer-motion": "11.15.0",
 		"intl-messageformat": "^10.5.0",
+		"js-cookie": "^3.0.5",
 		"next": "15.1.3",
+		"next-intl": "^3.26.3",
 		"next-themes": "^0.4.4",
 		"react": "19.0.0",
 		"react-dom": "19.0.0"
@@ -35,6 +37,7 @@
 	"devDependencies": {
 		"@next/eslint-plugin-next": "15.1.3",
 		"@react-types/shared": "3.26.0",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "22.10.2",
 		"@types/react": "19.0.2",
 		"@types/react-dom": "19.0.2",
